--- a/src/weather.css
+++ b/src/weather.css
@@ -1,3 +1,52 @@
+body {
+  background-color: aquamarine;
+}
+
 .weather {
-    border: 1px solid #dadde1;
+  border: 1px solid #dadde1;
+  font-family: arial, sans-serif;
+  color: #878787;
+  padding: 16px;
+  border-radius: 4px;
+}
+
+.weather h1 {
+  font-size: 22px;
+  font-weight: 100;
+  line-height: 28.8px;
+  margin: 20px 0 0 0;
+}
+
+.weather ul {
+  margin: 0;
+  padding: 0;
+}
+
+.weather li {
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+  list-style: none;
+}
+.weather img {
+  float: left;
+  margin-right: 10px;
+  width: 64px;
+}
+.weather .temp {
+  font-weight: bold;
+  color: #212121;
+  font-size: 64px;
+  font-weight: 400;
+  line-height: 64px;
+}
+
+.weather .unit {
+  color: #212121;
+  font-size: 16px;
+  font-weight: 400;
+  position: relative;
+  top: -32px;
+  margin-left: 5px;
+  line-height: 1;
 }
