--- a/src/weather.css
+++ b/src/weather.css
@@ -29,15 +29,16 @@ body {
   list-style: none;
 }
 .weather canvas {
-  float: left;
-  margin-top: 5px;
+  margin-top: 10px auto;
 }
 .weather .temp {
   font-weight: bold;
-  color: #212121;
+  color: rgb(33, 33, 33);
   font-size: 64px;
-  font-weight: 400;
   line-height: 64px;
+  margin-left: 5px;
+  font-weight: 400;
+  margin-left: 10px;
 }
 
 .weather .unit {
