--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 body {
     font-family: arial, sans-serif;
+    -webkit-text-size-adjust: 100%;
+}
+
+.form-control {
+    background-clip: padding-box;
+}
+
+.form-check-input {
+    color-adjust: exact;
+}
+
+th {
+    text-align: -webkit-match-parent;
 }
